clusters/on-prem/apps/media/jellyfin/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jellyfin-ingress
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:o8XQ3uomX+9lbALtleHrfoeajssKIjxMSA==,iv:k3u0ImRXElj6CJzXqGyOzr/8fwVj3INgSZ/vvrSewxM=,tag:HnNBZeyRv5JFdTDSJt96+A==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:L/+g6qY+Cr9/K7VbcFRJOKT9P5/Jtscl2Q==,iv:usc2i+x+N+duAKB1uqqKE0za8VFJCtQPZstMVcd89pQ=,tag:jgodAb0fJMXvVf/aDPwRgg==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: jellyfin-service
                        port:
                            number: 8096
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBUGZHdjVnV0F2d1dOUDdP
[...]
            J5Wv/3VDZy0l1GsrqidaTmiPsbJ3MjWdF2zf2dRbVBFcFZ074IAckg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-01-21T18:59:51Z"
    mac: ENC[AES256_GCM,data:n5cQSz1mBrts0yRFZZb+B3KRBrx05sYWizWc+DQOjG/HLWYe0jjRu/BKyWj1pn2w+vmhRa9264C8JUKYyygr6xBhr9jhKrAfGRbcu0GeFzBcQK0jdkgMiYXmqi+aP6ijizoyrqWGc5vkOgicJW1rIlGZXOc1U7WqQdTD/ETULwM=,iv:6hcVQbZ0XIYGJBk6V4cyNeo6aljIJriP6ozLfT5efZg=,tag:zxdYCVvdXyJttu2xNJ8DtQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
